--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,7 @@
         "pxlrbt/filament-excel": "^2.3"
     },
     "require-dev": {
+        "dedoc/scramble": "^0.12.28",
         "fakerphp/faker": "^1.9.1",
         "laravel/pint": "^1.0",
         "laravel/sail": "^1.18",
